--- a/ActivityStartup/app/src/main/res/values/strings.xml
+++ b/ActivityStartup/app/src/main/res/values/strings.xml
@@ -8,4 +8,7 @@
     <string name="quote_too_high">输入金额应不大于40000</string>
     <string name="quote_too_low">输入金额应不少于5000</string>
 
+    <string name="confirm">确认</string>
+    <string name="cancel">取消</string>
+
 </resources>
